--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
-    "next": "14.1.4",
+    "next": "^14.2.0",
     "react": "^18",
     "react-dom": "^18"
   },
